# IcePack

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
IcePack/: __init__.py
IcePack/Blender/: BlendManager.py  README.md  ShardBlender.py  TruthBlender.py  __init__.py
IcePack/Enum/: EnergyRange.py  Flavour.py  SummaryMode.py  __init__.py
IcePack/EventFilter/: CCFilter.py  CompositeEventFilter.py  ContainmentFilter.py  EventFilter.py  EventFilterManager.py  IntraIceCubeSegmentFilter.py  Muon13Filter.py  PureNeutrinoEventFilter.py  README.md
IcePack/PMTfication/: PMTSummariser.py  PMTTruthEntity.py  PMTTruthFromSummary.py  PMTTruthFromTruth.py  PMTTruthMaker.py  PMTfier.py  README.md  ReferencePositionAdder.py
IcePack/PMTfication/Layout/: CorsikaLayout.py  SnowstormLayout.py  SourceLayout.py
IcePack/ReferencePosition/: unique_string_dom_combinations_completed.csv
IcePack/Tracer/: PMTfiedTracer.py  PulseMapTracer.py  Tracer.py
IcePack/examples/: 1.PMTfy.py  2.EventFilterExample.py  3.BlenderExample.py  4.TracerExample.py  PMTfy_by_part.sh
