[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "IcePack"
version = "0.2.0"
description = "IcePack: A package for PMT-wisely summarised pulse map data."
readme = "README.md"
authors = [
  { name = "Cyan", email = "cyan.jo@proton.me" },
  { name = "Luc", email = "bcd457@alumni.ku.dk" }
]
requires-python = ">=3.9"
dependencies = [
  "numpy==1.26.4",
  "pyarrow==18.1.0",
  "scipy==1.13.1",
  "scikit-learn==1.6.1",
  "tqdm==4.66.4",
  "tabulate==0.9.0",
  "psutil==5.9.8",
  "matplotlib==3.9.0",
  "black",
  "flake8"
]

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
(
    __init__.py
)
'''
